--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,58 @@
 body{
+  background-color:hsl(204, 43%, 93%);
+  color: white;
   font-family: Karla,sans-serif;
+  padding: 2rem;
+}
+
+h1{
+  color: hsl(179, 62%, 43%);
+}
+h2{
+  color:hsl(71, 73%, 54%);
+  font-size: 1rem;
+}
+h3{
+  color: white;
+}
+
+.join{
+background-color: white;
+color: hsl(218, 22%, 67%);
+}
+.monthly{
+  background-color: hsl(179, 62%, 43%);
+  color: white;
+}
+.dollars{
+  font-size: 2rem;
+}
+
+.per{
+  color: hsl(204, 43%, 93%);
+}
+
+.why{
+  background-color: hsl(179, 62%, 43%);
+}
+button{
+  background-color:hsl(71, 73%, 54%);
+  border-color:hsl(71, 73%, 54%);
+  color:white;
+  font-family: Karla, sans-serif;
+}
+
+ul{
+  padding:0;
+}
+
+li{
+  color: hsl(204, 43%, 93%);
+  list-style-type: none;
+}
+
+footer{
+  color:hsl(179, 62%, 43%);
+  margin-top: 5rem;
+  text-align: center;
 }
