--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,16 @@ h3{
   color: white;
 }
 
+section{
+  background-color: hsl(179, 62%, 43%);
+  padding:1rem;
+
+}
 .join{
 background-color: white;
 color: hsl(218, 22%, 67%);
 }
 .monthly{
-  background-color: hsl(179, 62%, 43%);
   color: white;
 }
 .dollars{
@@ -33,13 +37,17 @@ color: hsl(218, 22%, 67%);
 }
 
 .why{
-  background-color: hsl(179, 62%, 43%);
+  opacity:0.7;
 }
 button{
   background-color:hsl(71, 73%, 54%);
   border-color:hsl(71, 73%, 54%);
+  border-radius: 5%;
+  border-style:none;
   color:white;
   font-family: Karla, sans-serif;
+  padding: 1rem;
+  width: -webkit-fill-available;
 }
 
 ul{
