--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ color: hsl(218, 22%, 67%);
 button{
   background-color:hsl(71, 73%, 54%);
   border-color:hsl(71, 73%, 54%);
-  border-radius: 5%;
+  border-radius: 0.3rem;
   border-style:none;
   color:white;
   font-family: Karla, sans-serif;
@@ -63,4 +63,29 @@ footer{
   color:hsl(179, 62%, 43%);
   margin-top: 5rem;
   text-align: center;
+}
+
+/* Styling for different screen sizes
+Designs created to these widths
+- Mobile: 375px = 23.5 rem
+- Desktop: 1440px = 90rem */
+@media(min-width: 90rem){
+  body{
+    padding: 8rem 27rem;
+  }
+  main{
+    display:grid;
+  }
+  section{
+    padding: 2rem 3rem;
+  }
+  .join{
+  grid-column: 1/3;
+  }
+  .monthly{
+    grid-row: 2;
+  }
+  .why{
+    grid-row: 2;
+  }
 }
