--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ color: hsl(218, 22%, 67%);
 }
 .dollars{
   font-size: 2rem;
+  font-weight: 700;
 }
 
 .per{
@@ -46,8 +47,13 @@ button{
   border-style:none;
   color:white;
   font-family: Karla, sans-serif;
+  font-weight: 700;
   padding: 1rem;
   width: -webkit-fill-available;
+}
+button:focus{
+  background-color: white;
+  color:hsl(179, 62%, 43%);
 }
 
 ul{
@@ -61,7 +67,7 @@ li{
 
 footer{
   color:hsl(179, 62%, 43%);
-  margin-top: 5rem;
+  margin-top: 7rem;
   text-align: center;
 }
 
