--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ section{
 }
 .join{
 background-color: white;
+border-radius: 0.5rem 0.5rem 0 0;
 color: hsl(218, 22%, 67%);
 }
 .monthly{
@@ -35,9 +36,11 @@ color: hsl(218, 22%, 67%);
 
 .per{
   color: hsl(204, 43%, 93%);
+  vertical-align: super;
 }
 
 .why{
+  border-radius: 0 0 0.5rem 0.5rem;
   opacity:0.7;
 }
 button{
@@ -89,9 +92,11 @@ Designs created to these widths
   grid-column: 1/3;
   }
   .monthly{
+    border-radius: 0 0 0 0.5rem;
     grid-row: 2;
   }
   .why{
+    border-radius: 0 0 0.5rem 0;
     grid-row: 2;
   }
 }
