--- a/styles.css
+++ b/styles.css
@@ -1,80 +1,86 @@
-body{
-  background-color:hsl(204, 43%, 93%);
+body {
+  background-color: hsl(204, 43%, 93%);
   color: white;
-  font-family: Karla,sans-serif;
+  font-family: Karla, sans-serif;
   padding: 2rem;
 }
-main{
-  max-width: 40rem;
+
+main {
+  display: block;
+  max-width: 20rem;
+  margin: auto;
 }
-h1{
+
+h1 {
   color: hsl(179, 62%, 43%);
 }
-h2{
-  color:hsl(71, 73%, 54%);
+
+h2 {
+  color: hsl(71, 73%, 54%);
   font-size: 1rem;
 }
-h3{
+
+h3 {
   color: white;
 }
 
-section{
+section {
   background-color: hsl(179, 62%, 43%);
-  padding:1rem;
-
+  padding: 1rem;
 }
-.join{
-background-color: white;
-border-radius: 0.5rem 0.5rem 0 0;
-color: hsl(218, 22%, 67%);
 
+.join {
+  background-color: white;
+  border-radius: 0.5rem 0.5rem 0 0;
+  color: hsl(218, 22%, 67%);
 }
-.monthly{
+
+.monthly {
   color: white;
-
 }
-.dollars{
+
+.dollars {
   font-size: 2rem;
-
 }
 
-.per{
+.per {
   color: hsl(204, 43%, 93%);
   vertical-align: super;
 }
 
-button{
-  background-color:hsl(71, 73%, 54%);
-  border-color:hsl(71, 73%, 54%);
+button {
+  background-color: hsl(71, 73%, 54%);
+  border-color: hsl(71, 73%, 54%);
   border-radius: 0.3rem;
-  border-style:none;
-  color:white;
+  border-style: none;
+  color: white;
   font-family: Karla, sans-serif;
   font-weight: 700;
   padding: 1rem;
-  width: -webkit-fill-available;
+  /* width: -webkit-fill-available; */
 }
-button:focus{
+
+button:focus {
   background-color: white;
-  color:hsl(179, 62%, 43%);
+  color: hsl(179, 62%, 43%);
 }
 
-.why{
+.why {
   border-radius: 0 0 0.5rem 0.5rem;
-  opacity:0.7;
+  opacity: 0.7;
 }
 
-ul{
-  padding:0;
+ul {
+  padding: 0;
 }
 
-li{
+li {
   color: hsl(204, 43%, 93%);
   list-style-type: none;
 }
 
-footer{
-  color:hsl(179, 62%, 43%);
+footer {
+  color: hsl(179, 62%, 43%);
   margin-top: 7rem;
   text-align: center;
 }
@@ -84,33 +90,40 @@ Designs created to mobile and desktop widths
 - Mobile: 375px = 23.5 rem
 - Desktop: 1440px = 90rem  LARGE!
 - Medium: 1024px = 64rem*/
-@media(min-width: 64rem){
-  body{
+@media(min-width: 64rem) {
+  body {
     padding: 8rem 12rem;
   }
-  main{
-    display:grid;
 
+  main {
+    display: grid;
+    max-width: 45rem;
   }
-  section{
+
+  section {
     padding: 2rem 3rem;
   }
-  .join{
-  grid-column: 1/3;
+
+  .join {
+    grid-column: 1/3;
   }
-  .monthly{
+
+  .monthly {
     border-radius: 0 0 0 0.5rem;
     grid-row: 2;
   }
-  .why{
-    border-radius: 0 0 0.5rem 0;
-    grid-row: 2;
-  }
-  button{
+
+  button {
     cursor: pointer;
   }
-  button:hover{
+
+  button:hover {
     background-color: white;
-    color:hsl(179, 62%, 43%);
+    color: hsl(179, 62%, 43%);
+  }
+
+  .why {
+    border-radius: 0 0 0.5rem 0;
+    grid-row: 2;
   }
 }
